Closed Bug 1292190 Opened 8 years ago Closed 8 years ago

Baldr: fix include dependencies

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla51
Tracking Status
firefox51 --- fixed

People

(Reporter: luke, Assigned: luke)

Details

Attachments

(1 file)

Some of the "lightweight" (types, constants, helpers) wasm headers (WasmBinary.h/WasmTypes.h) are transitively including most of the world via builtin/SIMD.h which in turn is inverting the intended header dependency (WasmJS.h should depend on WasmTypes.h). This patch makes builtin/SIMD.h into a lightweight header by cutting the dependency on TypedObjects.h (which pulls in everything).
Attachment #8777858 - Flags: review?(bbouvier)
Comment on attachment 8777858 [details] [diff] [review] rearrange-include-deps Review of attachment 8777858 [details] [diff] [review]: ----------------------------------------------------------------- Nice! (I assume you've checked it builds with non-unified compilation on at least one platform; this *should* not be platform dependent, but who knows)
Attachment #8777858 - Flags: review?(bbouvier) → review+
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla51
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: