Bug 1292190 - Baldr: fix include dependencies (r=bbouvier)

MozReview-Commit-ID: BAte5sedqaS