js/src/asmjs/WasmInstance.h
@@ -66,7 +66,7 @@ class Instance
 
   public:
     Instance(JSContext* cx,
-             Handle<WasmInstanceObject*> object,
+             HandleWasmInstanceObject object,
              UniqueCode code,
              HandleWasmMemoryObject memory,
              SharedTableVector&& tables,
